--- a/css/cv.css
+++ b/css/cv.css
@@ -37,3 +37,86 @@
 .page{
     background-color: #fff;
 }
+
+.menu {
+    float: left;
+    position: fixed;
+    font-size: 20px;
+    top: 30%;
+}
+
+.menu div{
+    background-color: #3a87ad;
+    color: #fff;
+    text-shadow: none;
+    background-image: none;
+    
+    padding: .40em;
+    text-align: left;
+    
+    border-radius: 0px 10px 10px 0;
+    -moz-border-radius: 0px 10px 10px 0;
+    -webkit-border-radius: 0px 10px 10px 0;
+    
+    margin-bottom: 3px;
+    
+    width: 55px;
+    height: auto;
+    white-space: nowrap;
+    overflow: hidden;
+    
+    webkit-transition: 0.3s width ease, 0.5s transform ease;
+    -moz-transition: 0.3s width ease, 0.5s transform ease;
+    -o-transition: 0.3s width ease, 0.5s transform ease;
+    -ms-transition: 0.3s width ease, 0.5s transform ease;
+    
+    transition: 0.3s width ease, 0.5s transform ease;
+    transition-property: width, transform;
+    transition-duration: 0.3s, 0.5s;
+    transition-timing-function: ease, ease;
+    transition-delay: initial, initial;
+}
+
+.menu .text {
+    position: absolute;
+    white-space: nowrap;
+    top: auto;
+    left: 54px;
+    font-size: 16px;
+    opacity: 0;
+    
+    -webkit-transition: 0.3s opacity 0.3s;
+    -moz-transition: 0.3s opacity 0.3s;
+    -o-transition: 0.3s opacity 0.3s;
+    -ms-transition: 0.3s opacity 0.3s;
+    transition: 0.3s opacity 0.3s;
+}
+
+.menu div:hover{
+    width: 150px;
+    
+    webkit-transition: 0.3s width ease, 0.5s transform ease;
+    -moz-transition: 0.3s width ease, 0.5s transform ease;
+    -o-transition: 0.3s width ease, 0.5s transform ease;
+    -ms-transition: 0.3s width ease, 0.5s transform ease;
+    
+    transition: 0.3s width ease, 0.5s transform ease;
+    transition-property: width, transform;
+    transition-duration: 0.3s, 0.5s;
+    transition-timing-function: ease, ease;
+    transition-delay: initial, initial;
+}
+
+.menu div:hover .text{
+    opacity: 1;
+    
+    -webkit-transition: 0.3s opacity 0.3s;
+    -moz-transition: 0.3s opacity 0.3s;
+    -o-transition: 0.3s opacity 0.3s;
+    -ms-transition: 0.3s opacity 0.3s;
+    transition: 0.3s opacity 0.3s;
+}
+
+.menu a {
+    color: #fff;
+}
