more info plus minor change in style

--- a/less/creative.less
+++ b/less/creative.less
@@ -160,6 +160,7 @@ header {
     .background-cover;
     background-position: center;
     background-image: url('../img/netw_disp.png');
+    background-attachment: fixed;
     //text-align: center;
     //color: white;
     .header-content {
