--- a/less/creative.less
+++ b/less/creative.less
@@ -55,12 +55,16 @@ p {
     color: white;
 }
 
+.bg-gray {
+    background-color: @theme-gray;
+}
+
 .text-faded {
     color: fade(white, 70%);
 }
 
 section {
-    padding: 100px 0;
+    padding: 50px 0;
 }
 
 aside {
@@ -74,27 +78,20 @@ aside {
 // Navigation
 
 .navbar-default {
+    color: @theme-dark;
     background-color: white;
-    border-color: fade(@theme-dark, 5%);
+    border-color: @theme-dark;
+    font-weight: 700;
+    text-transform: uppercase;
     .sans-serif-font;
     .transition-all;
-    .navbar-header .navbar-brand {
-        color: @theme-primary;
-        .sans-serif-font;
-        font-weight: 700;
-        text-transform: uppercase;
-        &:hover,
-        &:focus {
-            color: darken(@theme-primary, 10%);
-        }
-    }
     .nav {
         > li {
             > a,
             > a:focus {
                 text-transform: uppercase;
                 font-weight: 700;
-                font-size: 13px;
+                font-size: 15px;
                 color: @theme-dark;
                 &:hover {
                     color: @theme-primary;
@@ -103,10 +100,10 @@ aside {
             &.active {
                 > a,
                 > a:focus {
-                    color: @theme-primary !important;
-                    background-color: transparent;
+                    color: white !important;
+                    background-color: @theme-primary;
                     &:hover {
-                        background-color: transparent;
+                        background-color: @theme-primary;
                     }
                 }
             }
@@ -114,41 +111,11 @@ aside {
     }
     @media (min-width: 768px) {
         background-color: transparent;
-        border-color: fade(white, 30%);
-        .navbar-header .navbar-brand {
-            color: fade(white, 70%);
-            &:hover,
-            &:focus {
-                color: white;
-            }
-        }
-        .nav > li > a,
-        .nav > li > a:focus {
-            color: fade(white, 70%);
-            &:hover {
-                color: white;
-            }
-        }
-        &.affix {
-            background-color: white;
-            border-color: fade(@theme-dark, 5%);
-            .navbar-header .navbar-brand {
-                color: @theme-primary;
-                font-size: 14px;
-                &:hover,
-                &:focus {
-                    color: darken(@theme-primary, 10%);
-                }
-            }
-            .nav > li > a,
-            .nav > li > a:focus {
-                color: @theme-dark;
-                &:hover {
-                    color: @theme-primary;
-                }
-            }
-        }
     }
+}
+
+.active {
+    color:@theme-primary;
 }
 
 // Homepage Header
@@ -208,6 +175,11 @@ header {
             }
         }
     }
+}
+
+// Font color primary
+.color-primary {
+    color : @theme-primary;
 }
 
 // Sections
