network image not needed anymore

--- a/less/creative.less
+++ b/less/creative.less
@@ -126,8 +126,7 @@ header {
     min-height: auto;
     .background-cover;
     background-position: center;
-    background-image: url('../img/netw_disp.png');
-    background-attachment: fixed;
+    background-color: #ffffff;
     //text-align: center;
     //color: white;
     .header-content {
