fixed bouncing ball

--- a/less/creative.less
+++ b/less/creative.less
@@ -118,6 +118,18 @@ aside {
     color:@theme-primary;
 }
 
+//Bounce
+.bounce {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    margin-left: -30px;
+    animation: bounce 2s infinite;
+    -webkit-animation: bounce 2s infinite;
+    -moz-animation: bounce 2s infinite;
+    -o-animation: bounce 2s infinite;
+}
+
 // Homepage Header
 
 header {
