--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,9 @@
 // Variables
 
-@theme-primary: #3D72A4;
-@theme-dark: #222;
-@theme-gray: #FAFAFA;
+@theme-primary: #3498DB;
+@theme-dark: #34495e;
+@theme-gray: #ecf0f1;
+@silver: #bdc3c7;
+
+@dev: #27ae60;
+@libs: #34495e;
