commednted out annimate js

--- a/less/creative.less
+++ b/less/creative.less
@@ -1,4 +1,5 @@
 @import (inline) "node_modules/bootstrap/dist/css/bootstrap.css";
+//@import (inline) "http://s.mlcdn.co/animate.css";
 
 @import "variables.less";
 @import "mixins.less";
