--- a/less/creative.less
+++ b/less/creative.less
@@ -4,6 +4,10 @@
 @import "variables.less";
 @import "mixins.less";
 
+.portfolio-item {
+  margin-bottom: 25px;
+}
+
 /* TIMELINE */
 .timeline {
     position: relative;
